# cookiecutter-python

./: README.md  cookiecutter.json
.github/workflows/: ci.yml
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: Makefile  README.md  conftest.py  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
{{cookiecutter.project_slug}}/doc/source/: conf.py  index.rst
{{cookiecutter.project_slug}}/doc/source/{{cookiecutter.project_slug}}/: development.rst  installation.rst
{{cookiecutter.project_slug}}/doc/source/{{cookiecutter.project_slug}}/api/: index.rst
{{cookiecutter.project_slug}}/tests/: {{cookiecutter.project_slug}}_test.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  cli.py  {{cookiecutter.project_slug}}.py
