{% set github_url = 'https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}' %}
{% set has_cli = cookiecutter.command_line_interface != 'No command-line interface' %}

[metadata]
name = {{cookiecutter.project_slug}}
summary = {{cookiecutter.project_short_description}}
description-file = README.md
description-content-type = text/markdown; charset=UTF-8

author = {{cookiecutter.full_name}}
author-email = {{cookiecutter.email}}

home-page = {{github_url}}
project_urls =
    Bug Tracker = {{github_url}}/issues
    Documentation = https://{{cookiecutter.project_slug}}.readthedocs.io/en/latest/

license = {{cookiecutter.open_source_license}}
license_file = LICENSE

# TODO Add more classifiers here
classifier =
    Programming Language :: Python :: 3

{% if has_cli %}
[options.entry_points]
console_scripts =
    {{cookiecutter.project_slug}}={{cookiecutter.project_slug}}.cli:main
{% endif %}

[bdist_wheel]
universal = 1

[files]
packages =
    {{cookiecutter.project_slug}}
